--- a/maquetas/productos.html
+++ b/maquetas/productos.html
@@ -26,14 +26,18 @@
 		<header>
 			<nav>
 				<a href="index.html" class="navbar-brand"><img src="../styles/img/granpez-logocompleto.svg" alt=""></a>
-				<ul class="">
-					<li><a href="">quienes somos</a></li>
-					<li><a href="productos.html">productos</a></li>
-					<li><a href="">clientes</a></li>
+				<ul class="tabs">
+					<li><a href="quienes-somos.html">quienes somos</a></li>
+					<li class="popo"><a href="productos.html">productos</a></li>
+					<li><a href="clientes.html">clientes</a></li>
 					<li><a href="">contacto</a></li>
 				</ul>
-
-
+				<ul class="dropdown-menu">
+					<li><a href="">Tv aire</a></li>
+					<li><a href="">cable</a></li>
+					<li><a href="">ficcion</a></li>
+					<li><a href="">publicidad</a></li>
+				</ul>
 			</nav>
 		</header>
 		<div class="main-container">
@@ -69,26 +73,39 @@
 							</div>
 						</div>
 
-						<div class="col-md-12 show-container">
+						<div class="col-md-12 show-container modulo-show-plus-info">
 							<div class="row">
 								<div class="col-md-4 name-show ">
-									<img src="../styles/img/babylon-name-show.jpg" alt="">
-									<p>
-										Maru Botana recorrerá distintos lugras <br>
-										emblemáticos de Argentina para cocinar platos <br>
-										espectaculares con los ingredientes típicos de <br>
-										cada zona.
-									</p>
-									<p>
-										Maru y un invitado gastronómico llegan a Sa <br>
-										Carlos de Bariloche con el objetivo de cocinar <br>
-										al aire libre en el medio del Cerro Catedral. <br>
-										gran receta.
-									</p>
+									<img src="../styles/img/intratables-name-show.jpg" alt="">
+									<div class="info-show">
+										<p>CANAL: AMERICA <img src="../styles/img/America_TV-logo.png" alt=""></p>
+										<p>FRECUENCIA: Lunes a Viernes</p>
+										<p>HORARIO: DE 20:30 A 23:30 HRS</p>
+										<p>CONDUCCION <br> SANTIAGO DEL MORO <br> + PANELISTAS</p>
+									</div>
 								</div>
 								<div class="col-md-8 preview-show text-right">
-									<img src="../styles/img/babylon-preview-show.jpg" alt="">
-									<a class="pull-left"href="">reel_babylon</a><img class="pull-left" src="../styles/img/play.svg" alt="">
+									<img src="../styles/img/intratables-preview-show.jpg" alt="">
+									<a class="pull-left"href="">reel_intratables</a><img class="pull-left" src="../styles/img/play.svg" alt="">
+								</div>
+								<div class="col-md-12 show-description">
+									<p>
+										El ciclo del prime time desarrolla las principales noticias del día con informes peciales,
+										debatoes en el piso, políticos invitados y la opinión de un <br> panel de especialistas integrador
+										por Paulo Vilouta, Diego Brancatelli, Jonatan Viale, Debora Plager, Liliana Franco y Carlos Campolongo. <br>
+										Notas, informes, los mejores reportajes a invitados, políticos, famosos interceptados, polémicas y archivos son los
+										condiminetos que hacer al <br> programa. Agíl, ácido, original, entretenido y con humor, Santiago Del Moro y su equipo
+										son ... Intratables.
+									</p>
+								</div>
+								<div class="col-md-12 more-info-show">
+									 <p><img src="../styles/img/logo-list.svg" alt="">2017 MEJOR PROGRAMA PERIODISTICO</p>
+									 <p><img src="../styles/img/logo-list.svg" alt="">SANIAGO DEL MORO GANADOR DEL MARTIN FIERRO</p>
+									<p class="premios">MEJOR LABOR EN CONDUCCIÓN MASCULINA DEL 2016</p>
+									<p><img src="../styles/img/logo-list.svg" alt="">GANADOR DE LOS PREMIOS TATO 2015</p>
+									<p class="premios">MEJOR PROGRAMA PERIODÍSTICO Y SANTIAGO DEL MORO</p>
+									<p class="premios">MEJOR CONDUCCIÓN MASCULINA.</p>
+									<p><img src="../styles/img/logo-list.svg" alt=""> Rating Promedio IBOPE:7.17</p>
 								</div>
 								<div class="arrows col-md-12">
 									<img src="../styles/img/arrowhead-thin-outline-to-the-left.svg" alt="">
@@ -98,27 +115,37 @@
 							</div>
 						</div>
 
-						<div class="col-md-12 show-container">
+						<div class="col-md-12 show-container modulo-show-plus-info cocinando">
 							<div class="row">
 								<div class="col-md-4 name-show ">
-									<img src="../styles/img/babylon-name-show.jpg" alt="">
-									<p>
-										Maru Botana recorrerá distintos lugras <br>
-										emblemáticos de Argentina para cocinar platos <br>
-										espectaculares con los ingredientes típicos de <br>
-										cada zona.
-									</p>
-									<p>
-										Maru y un invitado gastronómico llegan a Sa <br>
-										Carlos de Bariloche con el objetivo de cocinar <br>
-										al aire libre en el medio del Cerro Catedral. <br>
-										gran receta.
-									</p>
+									<img src="../styles/img/cocinando-name-show.jpg" alt="">
+									<div class="info-show">
+										<p>CANAL: AMERICA <img src="../styles/img/America_TV-logo.png" alt=""></p>
+										<p>FRECUENCIA: Lunes a Viernes</p>
+										<p>HORARIO: DE 10 A 12 HRS</p>
+										<p>CONDUCCIÓN :<br> MARU BOTANA <br> + TURCO NAIM</p>
+									</div>
 								</div>
 								<div class="col-md-8 preview-show text-right">
-									<img src="../styles/img/babylon-preview-show.jpg" alt="">
-									<a class="pull-left"href="">reel_babylon</a><img class="pull-left" src="../styles/img/play.svg" alt="">
+									<img src="../styles/img/cocinando-preview-show.jpg" alt="">
+									<a class="pull-left"href="">reel_intratables</a><img class="pull-left" src="../styles/img/play.svg" alt="">
 								</div>
+								<div class="col-md-12 show-description">
+									<p>El espíritu del programa es ver a Maru cocinar recetas que podamos aplicar en nuestra vida cotidiana</p>
+									<p> Tanto ella como su pandilla de cocineros se transformarán en una brigada al rescate resolviendo inquietudes gastronómicas de la más variadas, <br>
+										tanto para el hogar como para eventos sociales.
+									</p>
+									<p>
+										El público se pondrá en contacto con Maru y le acercará sus inquietudes a través de llamados telefónicos, videos grabados, audios, emails, redes <br>
+										sociales y comunicación digital.
+									</p>
+
+									<p>
+										El segmento de edad del público participante será de lo más variado. Irá desde los adolescentes a los abuelos, amas de casa, mujeres que trabajan, <br>
+										padres divorciados con hijos, jóvenes solteros, solteras... El humor y la actualidad serán los condimientos principales del formato.
+									</p>
+								</div>
+
 								<div class="arrows col-md-12">
 									<img src="../styles/img/arrowhead-thin-outline-to-the-left.svg" alt="">
 									<img class="up" src="../styles/img/navigate-up-arrow.svg" alt="">
