--- a/maquetas/clientes.html
+++ b/maquetas/clientes.html
@@ -25,7 +25,7 @@
 	<body>
 		<header>
 			<nav>
-				<a href="#" class="navbar-brand"><img src="../styles/img/granpez-logocompleto.svg" alt=""></a>
+				<a href="index.html" class="navbar-brand"><img src="../styles/img/granpez-logocompleto.svg" alt=""></a>
 				<ul class="tabs">
 					<li><a href="quienes-somos.html">quienes somos</a></li>
 					<li class="popo"><a href="productos.html">productos</a></li>
@@ -40,23 +40,36 @@
 				</ul>
 			</nav>
 		</header>
-		<div class="main-container">
-			<div class="home">
-				<main>
-					<div id="background-video">
-				        <div onclick="play();" id="vidwrap">
-				        	<div class="caca">
-				        		<img src="../styles/img/granpez-logo.png" alt="">
-				        	</div>
-				        </div>
-				    </div>
-    			<script type="text/javascript">function play(){document.getElementById('vidwrap').innerHTML = '<iframe width="1000" height="1000" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1" frameborder="0" allowfullscreen></iframe>';}</script>
-				</main>
-				<footer>
+				<div class="clientes">
+				<main class="main-container">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="col-md-11 contenedor-logos">
+								<div class="logos">
+									<img src="../styles/img/Eltrece-logo.png"  style=" width:90px;" alt="">
+									<img src="../styles/img/Tv-publica-logo.png"  style=" width:200px;" alt="">
+									<img src="../styles/img/Elnueve-logo.png"  style=" width:70px;" alt="">
+									<img src="../styles/img/telefe-logo.png" style=" width:150px;"  alt="">
+									<img src="../styles/img/America-logo.svg"  style=" width:90px;" alt="">
+								</div>
+							</div>
 
-				</footer>
+						</div>
+						<div class="col-md-12">
+							<div class="clientes">
+								<img src="../styles/img/Elgourmet-logo.png"  style=" width:80px;" alt="">
+								<img src="../styles/img/Discovery-logo.png"  style=" width:300px;" alt="">
+								<img src="../styles/img/infinito-logo.png" style=" width:90px;"  alt="">
+								<img src="../styles/img/Telemundo-logo.png"  style=" width:90px;" alt="">
+								<img src="../styles/img/lanacionmas-logo.png"  style=" width:150px;" alt="">
+								<img src="../styles/img/Carone-logo.png"  style=" width:80px;" alt="">
+								<img src="../styles/img/nestle-logo.png" style=" width:80px;"  alt="">
+							</div>
+							</div>
+						</div>
+					</div>
+				</main>
 			</div>
-		</div>
 
 
 
@@ -107,15 +120,6 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js" async></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.min.js"></script>
-
-		<script>
-			$(".popo").hover(function(){
-				$('.dropdown-menu').show();
-			})
-			$(".dropdown-menu").mouseleave(function(){
-				$('.dropdown-menu').hide();
-			})
-		</script>
 
 	</body>
 </html>
