--- a/maquetas/index.html
+++ b/maquetas/index.html
@@ -28,7 +28,7 @@
 				<a href="#" class="navbar-brand"><img src="../styles/img/granpez-logocompleto.svg" alt=""></a>
 				<ul class="tabs">
 					<li><a href="quienes-somos.html">quienes somos</a></li>
-					<li class="popo"><a href="productos.html">productos</a></li>
+					<li class="producto-dropdown"><a href="productos.html">productos</a></li>
 					<li><a href="clientes.html">clientes</a></li>
 					<li><a href="">contacto</a></li>
 				</ul>
@@ -45,7 +45,7 @@
 				<main>
 					<div id="background-video">
 				        <div onclick="play();" id="vidwrap">
-				        	<div class="caca">
+				        	<div class="granpez-logo-reel">
 				        		<img src="../styles/img/granpez-logo.png" alt="">
 				        	</div>
 				        </div>
@@ -63,7 +63,7 @@
 		<!--===============================================
                             LOAD CSS
 		====================================================-->
-        <noscript id="deferred-styles">
+
             <!-- BOOTSTRAP -->
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
@@ -81,7 +81,7 @@
             <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
             <!--[if lt IE 9]> <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script> <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script> <![endif]-->
             <!--Gmap-->
-        </noscript>
+
 
         <script>
           var loadDeferredStyles = function() {
@@ -109,7 +109,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.min.js"></script>
 
 		<script>
-			$(".popo").hover(function(){
+			$(".producto-dropdown").hover(function(){
 				$('.dropdown-menu').show();
 			})
 			$(".dropdown-menu").mouseleave(function(){
