--- a/maquetas/productos.html
+++ b/maquetas/productos.html
@@ -28,7 +28,7 @@
 				<a href="index.html" class="navbar-brand"><img src="../styles/img/granpez-logocompleto.svg" alt=""></a>
 				<ul class="tabs">
 					<li><a href="quienes-somos.html">quienes somos</a></li>
-					<li class="popo"><a href="productos.html">productos</a></li>
+					<li class="producto-dropdown"><a href="productos.html">productos</a></li>
 					<li><a href="clientes.html">clientes</a></li>
 					<li><a href="">contacto</a></li>
 				</ul>
@@ -196,7 +196,7 @@
 		<!--===============================================
                             LOAD CSS
 		====================================================-->
-        <noscript id="deferred-styles">
+
             <!-- BOOTSTRAP -->
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
@@ -214,7 +214,7 @@
             <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
             <!--[if lt IE 9]> <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script> <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script> <![endif]-->
             <!--Gmap-->
-        </noscript>
+
 
         <script>
           var loadDeferredStyles = function() {
