--- a/maquetas/quienes-somos.html
+++ b/maquetas/quienes-somos.html
@@ -28,7 +28,7 @@
 				<a href="index.html" class="navbar-brand"><img src="../styles/img/granpez-logocompleto.svg" alt=""></a>
 				<ul class="tabs">
 					<li><a href="quienes-somos.html">quienes somos</a></li>
-					<li class="popo"><a href="productos.html">productos</a></li>
+					<li class="producto-dropdown"><a href="productos.html">productos</a></li>
 					<li><a href="clientes.html">clientes</a></li>
 					<li><a href="">contacto</a></li>
 				</ul>
@@ -73,25 +73,25 @@
 		<!--===============================================
                             LOAD CSS
 		====================================================-->
-        <noscript id="deferred-styles">
-            <!-- BOOTSTRAP -->
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
-            <!-- FONT AWESOME -->
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <!-- BOOTSTRAP -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
-            <!-- MATERIAL ICONS -->
-            <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-            <link rel="stylesheet" href="../styles/css/normalize.css">
-            <link rel="stylesheet" href="../styles/css/slick.css">
-            <link rel="stylesheet" href="../styles/css/slick-theme.css">
-            <link rel="stylesheet" href="../styles/css/main.css" rel="stylesheet">
+        <!-- FONT AWESOME -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-            <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-            <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-            <!--[if lt IE 9]> <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script> <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script> <![endif]-->
-            <!--Gmap-->
-        </noscript>
+        <!-- MATERIAL ICONS -->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="../styles/css/normalize.css">
+        <link rel="stylesheet" href="../styles/css/slick.css">
+        <link rel="stylesheet" href="../styles/css/slick-theme.css">
+        <link rel="stylesheet" href="../styles/css/main.css" rel="stylesheet">
+
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]> <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script> <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script> <![endif]-->
+        <!--Gmap-->
+
 
         <script>
           var loadDeferredStyles = function() {
